--- a/static/style/isbn.css
+++ b/static/style/isbn.css
@@ -97,3 +97,32 @@ body {
     background-color: #444;
     color: #fff;
   }
+
+/*
+  Link click effect
+*/
+
+footer a,
+section a {
+  color:#159af3;
+  text-decoration: none;
+  position: relative;
+  transition: all 0.3s ease;
+}
+footer a::before,
+section a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color:#159af3;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 0.3s ease;
+}
+footer a:hover::before,
+section a:hover::before {
+  transform: scaleX(1);
+}
